--- a/home/wiki/App/Xtn/Page_sync.html
+++ b/home/wiki/App/Xtn/Page_sync.html
@@ -106,7 +106,7 @@
       <span class="mw-headline" id="Options">Options</span>
     </h2>
     <p>
-      The options page is at <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_2" title="Options/Page sync">Options/Page_sync</a>
+      The options page is at <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_2" title="Options/Page sync" class="xowa-visited">Options/Page_sync</a>
     </p>
     <h2>
       <span class="mw-headline" id="Background">Background</span>
@@ -119,7 +119,7 @@
         Wikimedia generates offline Wikitext dumps twice per month. See <a href="https://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">https://dumps.wikimedia.org/backup-index.html</a>
       </li>
       <li>
-        XOWA generates HTML dumps once per month. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_3" title="Special:XowaDownloadCentral">Special:XowaDownloadCentral</a>
+        XOWA generates HTML dumps once per month. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_3" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
       </li>
     </ul>
     <p>
