--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -500,7 +500,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Page_sync.html" id="xolnki_4" title="App/Xtn/Page sync">App/Xtn/Page_sync</a> <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_5" title="Options/Page sync" class="xowa-visited">Options/Page_sync</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Page_sync.html" id="xolnki_4" title="App/Xtn/Page sync" class="xowa-visited">App/Xtn/Page_sync</a> <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_5" title="Options/Page sync" class="xowa-visited">Options/Page_sync</a>
       </dd>
     </dl>
     <ul>
@@ -690,7 +690,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_7" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_7" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
       </dd>
     </dl>
     <ul>
@@ -873,7 +873,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_11" title="Options/Import">Options/Import</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_11" title="Options/Import" class="xowa-visited">Options/Import</a>
       </dd>
     </dl>
     <ul>
@@ -1190,7 +1190,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Change_log/2016.html" id="xolnki_14" title="Change log/2016">2016 Change Log</a>
+        <a href="http://xowa.org/home/wiki/Change_log/2016.html" id="xolnki_14" title="Change log/2016" class="xowa-visited">2016 Change Log</a>
       </li>
       <li>
         <a href="http://xowa.org/home/wiki/Change_log/2015.html" id="xolnki_15" title="Change log/2015">2015 Change Log</a>
