--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -576,7 +576,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
@@ -871,7 +871,7 @@
         (fix) [broken since:v0.9.3] Gallery: Gallery items with no caption would cause page to fail; EX:&lt;gallery&gt;File:A.png&lt;/gallery&gt; {detected by Schnark}. See: <a href="http://de.wikipedia.org/wiki/Lewis_Carroll" rel="nofollow" class="external free">http://de.wikipedia.org/wiki/Lewis_Carroll</a>
       </li>
       <li>
-        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window">Options/Window</a>
+        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
       <li>
         (file) [broken since:v0.9.3] Import: Search version2 fails if explicitly added to normal import (which uses search version2 by default).
@@ -937,7 +937,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Sqlite search now has word index database (gui). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_18" title="Options/Import">Options/Import</a>
+        (add) Search: Sqlite search now has word index database (gui). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_18" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -1130,7 +1130,7 @@
     </p>
     <ul>
       <li>
-        (done) Import: Maintenance view to identify outdated wikis {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_22" title="Dashboard/Wiki maintenance">Dashboard/Wiki_maintenance</a>
+        (done) Import: Maintenance view to identify outdated wikis {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_22" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a>
       </li>
     </ul>
     <p>
@@ -1170,7 +1170,7 @@
         (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
-        (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import">Options/Import</a>
+        (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <h2>
@@ -1392,7 +1392,7 @@
         (fix) References: Follow attribute should be supported {detected by Schnark}. See: <a href="http://de.wikisource.org/wiki/Die_Trunksucht" rel="nofollow" class="external free">http://de.wikisource.org/wiki/Die_Trunksucht</a>
       </li>
       <li>
-        (fix) Css: xowa_commons.css should not be downloaded {assisted by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import">Options/Import</a>
+        (fix) Css: xowa_commons.css should not be downloaded {assisted by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         (fix) Import: Total article count should not include redirects for sqlite.
@@ -1491,13 +1491,13 @@
     </p>
     <ul>
       <li>
-        (add) Import: Sqlite database import available through UI. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_33" title="Options/Import">Options/Import</a>
+        (add) Import: Sqlite database import available through UI. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_33" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
@@ -1811,7 +1811,7 @@
     </p>
     <ul>
       <li>
-        (add) Import: pages now save directly to compressed format (.gz) {requested by Miles}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_41" title="Options/Import">Options/Import</a>
+        (add) Import: pages now save directly to compressed format (.gz) {requested by Miles}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_41" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -2285,7 +2285,7 @@
         (add) Option for content application paths {requested by Miles} See <a href="http://xowa.org/home/wiki/Options/Apps.html" id="xolnki_55" title="Options/Apps">Options/Apps</a>
       </li>
       <li>
-        (add) Option for data dump imports, including automatic zipping {requested by hidp123;Miles} See <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_56" title="Options/Import">Options/Import</a>
+        (add) Option for data dump imports, including automatic zipping {requested by hidp123;Miles} See <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_56" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
