--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -450,7 +450,7 @@
         Css: Extract logo correctly due to recent MediaWiki change (affects XOWA logo showing instead of wiki's logo); EX:mw-wiki-logo. See: <a href="https://simple.wikipedia.org/wiki/Main_Page" rel="nofollow" class="external free">https://simple.wikipedia.org/wiki/Main_Page</a>
       </li>
       <li>
-        Css: Default download-xowa_commons.css to true (affects XOWA logo showing instead of wiki's logo). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_2" title="Options/Import">Options/Import</a>
+        Css: Default download-xowa_commons.css to true (affects XOWA logo showing instead of wiki's logo). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_2" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         Config: Default web-access-enabled to true (affects XOWA logo showing instead of wiki's logo). See: <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_3" title="Options/Security" class="xowa-visited">Options/Security</a>
@@ -706,7 +706,7 @@
     </p>
     <ul>
       <li>
-        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a>
+        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a>
       </li>
     </ul>
     <p>
@@ -1845,7 +1845,7 @@
         Module.Popups: Increase hover show time from 400 to 600 ms (affects number of accidental hovers while scrolling through page). See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import">Options/Import</a>
+        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -2167,7 +2167,7 @@
         Messages: Manually add contactpage message for English (affects sidebar showing "contactpage" instead of "Contact us").
       </li>
       <li>
-        Options: Rename Page Storage Types to "text", "gzip", "bzip2". See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_34" title="Options/Import">Options/Import</a>
+        Options: Rename Page Storage Types to "text", "gzip", "bzip2". See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_34" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         Gui: Update address bar if page fails to load (affects wrong address listed in address bar when page fails to load) {detected by Schnark}.
@@ -2820,7 +2820,7 @@
         Release: Increase max memory from 512 MB to 1 GB.
       </li>
       <li>
-        Options: Remove zip as page storage format {suggested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_68" title="Options/Import">Options/Import</a>
+        Options: Remove zip as page storage format {suggested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_68" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         Gui: Middle click on Mouse Up, not Mouse Down.
@@ -3278,7 +3278,7 @@
         TitleBlacklist: Add stub for test. See: <a href="https://en.wikipedia.org/wiki/The_Kingdom_Keepers:_Disney_After_Dark" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/The_Kingdom_Keepers:_Disney_After_Dark</a>
       </li>
       <li>
-        Import: Fix import failure when zip is chosen as page storage format {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_79" title="Options/Import">Options/Import</a>
+        Import: Fix import failure when zip is chosen as page storage format {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_79" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         Gui: Add menu option to show progress messages window; EX:View -&gt; Show progress messages {requested by Miles}.
@@ -3901,7 +3901,7 @@
         Install: Run setup_linux script in general app init, not in gui init {detected by tibo1902}.
       </li>
       <li>
-        Import: Default to wikimedia.org as primary dump server {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_85" title="Options/Import">Options/Import</a>
+        Import: Default to wikimedia.org as primary dump server {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_85" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         Import: Default cache to 100 MB max and 75 MB min. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_86" title="Options/Files" class="xowa-visited">Options/Files</a>
@@ -3918,7 +3918,7 @@
         Import.Script: Change "Uncompress" default from "uncompress" to "read from compressed file" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_88" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
-        Options: Fix file selector button not working for "Import bz2 by stdout process" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_89" title="Options/Import">Options/Import</a>
+        Options: Fix file selector button not working for "Import bz2 by stdout process" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_89" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -4068,7 +4068,7 @@
     </p>
     <ul>
       <li>
-        Import: Make "decompress bz2 through stdout" the default {suggested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_92" title="Options/Import">Options/Import</a>
+        Import: Make "decompress bz2 through stdout" the default {suggested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_92" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         Wikidata.Scribunto: Add Wikibase.Entity support; EX:mw.wikibase.entity.lua. See: <a href="https://ru.wikipedia.org/wiki/Гильгамеш" rel="nofollow" class="external free">https://ru.wikipedia.org/wiki/Гильгамеш</a>
@@ -4185,7 +4185,7 @@
     </p>
     <ul>
       <li>
-        Import: Decompress bz2 through stdout (optional; candidate for default) {suggested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_96" title="Options/Import">Options/Import</a>
+        Import: Decompress bz2 through stdout (optional; candidate for default) {suggested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_96" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         Webserver: Handle search requests {detected by Nexutix}. See: <a href="https://localhost:8080/en.wikipedia.org/wiki/Special:Search?fulltext=y&amp;search=Earth" rel="nofollow" class="external free">https://localhost:8080/en.wikipedia.org/wiki/Special:Search?fulltext=y&amp;search=Earth</a>
@@ -4212,7 +4212,7 @@
         File.Offline: Fix user database downloads not saving after the first session.
       </li>
       <li>
-        Import: Change CSS generation to scrape stylesheet elements from the Main Page. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_97" title="Options/Import">Options/Import</a> <a href="https://bugzilla.wikimedia.org/show_bug.cgi?id=61249" rel="nofollow" class="external free">https://bugzilla.wikimedia.org/show_bug.cgi?id=61249</a>
+        Import: Change CSS generation to scrape stylesheet elements from the Main Page. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_97" title="Options/Import" class="xowa-visited">Options/Import</a> <a href="https://bugzilla.wikimedia.org/show_bug.cgi?id=61249" rel="nofollow" class="external free">https://bugzilla.wikimedia.org/show_bug.cgi?id=61249</a>
       </li>
     </ul>
     <p>
@@ -4220,7 +4220,7 @@
     </p>
     <ul>
       <li>
-        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Messages: Add "Contatti" message for contactpage in itwiki sidebar. See: <a href="https://it.wikipedia.org" rel="nofollow" class="external free">https://it.wikipedia.org</a>
@@ -4391,7 +4391,7 @@
         Wikisource.Page: Support onlysection; EX:&lt;pages onlysection="a"/&gt;.
       </li>
       <li>
-        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         Gui.Url_bar: Open articles with same name as language code; EX:war -&gt; current_wiki/wiki/war, not war.wikipedia.org.
