--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -25,7 +25,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/All.html" id="xolnki_2" title="Diagnostics/Javascript/All">Diagnostics/Javascript/All</a> 
+        <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/All.html" id="xolnki_2" title="Diagnostics/Javascript/All" class="xowa-visited">Diagnostics/Javascript/All</a> 
         <ul>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_3" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a>
@@ -86,7 +86,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All">Diagnostics/Scribunto/All</a> 
+        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All" class="xowa-visited">Diagnostics/Scribunto/All</a> 
         <ul>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Basic.html" id="xolnki_17" title="Diagnostics/Scribunto/Basic">Diagnostics/Scribunto/Basic</a>
