--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -60,7 +60,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia">Simple Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia">English Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
@@ -277,7 +277,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics">Diagnostics</a>
+              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics" class="xowa-visited">Diagnostics</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_44" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
