--- a/home/wiki/Help/Features/Search/Build.html
+++ b/home/wiki/Help/Features/Search/Build.html
@@ -75,7 +75,7 @@
         Upgrade an existing wiki with v3.3.4.1. You can upgrade with the following process 
         <ul>
           <li>
-            Go to <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_2" title="Dashboard/Wiki maintenance">Dashboard/Wiki_maintenance</a>
+            Go to <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_2" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a>
           </li>
           <li>
             Find your wiki in the list
@@ -172,7 +172,7 @@
     </p>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_5" title="Options/Import">Options/Import</a>
+        Go to <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_5" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         Change "PageRank iteration count" to 0
@@ -210,7 +210,7 @@
         <b>Test with Simple Wikipedia</b>: The full PageRank process only takes about 20 minutes and requires no more than another 1 GB.
       </li>
       <li>
-        <b>Recreate through <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_6" title="Dashboard/Wiki maintenance">Dashboard/Wiki_maintenance</a></b>: A search index is built when a wiki is first created. You can also recreate it at <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_7" title="Dashboard/Wiki maintenance">Dashboard/Wiki_maintenance</a>
+        <b>Recreate through <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_6" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a></b>: A search index is built when a wiki is first created. You can also recreate it at <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_7" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a>
       </li>
     </ul>
   
