--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -320,7 +320,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window">Window</a>
+              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window" class="xowa-visited">Window</a>
             </td>
             <td>
               Window Font and Startup position
@@ -365,7 +365,15 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts">Shortcuts</a>
+              <a href="http://xowa.org/home/wiki/Options/Scripting.html" id="xolnki_7" title="Options/Scripting" class="xowa-visited">Scripting</a>
+            </td>
+            <td>
+              Add scripts to customize the page
+            </td>
+          </tr>
+          <tr>
+            <td class='options_row_label'>
+              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_8" title="Options/Shortcuts" class="xowa-visited">Shortcuts</a>
             </td>
             <td>
               Keyboard shortcuts
@@ -373,7 +381,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_8" title="Options/Menus">Menus</a>
+              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_9" title="Options/Menus">Menus</a>
             </td>
             <td>
               Change the menu bar or right-click menu
@@ -381,7 +389,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_9" title="Options/Config script">Config script</a>
+              <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_10" title="Options/Config script">Config script</a>
             </td>
             <td>
               Change the startup configuration script
@@ -394,7 +402,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_10" title="Options/Import">Import</a>
+              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_11" title="Options/Import" class="xowa-visited">Import</a>
             </td>
             <td>
               Import options
@@ -402,7 +410,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_11" title="Options/Files" class="xowa-visited">Files</a>
+              <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_12" title="Options/Files" class="xowa-visited">Files</a>
             </td>
             <td>
               File / image options
@@ -410,7 +418,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML_databases.html" id="xolnki_12" title="Options/HTML databases" class="xowa-visited">HTML databases</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML_databases.html" id="xolnki_13" title="Options/HTML databases" class="xowa-visited">HTML databases</a>
             </td>
             <td>
               HTML database usage options
@@ -418,7 +426,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_13" title="Options/Page sync" class="xowa-visited">Page_sync</a>
+              <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_14" title="Options/Page sync" class="xowa-visited">Page_sync</a>
             </td>
             <td>
               Synchronize your offline page with the latest online one
@@ -426,7 +434,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_14" title="Options/Category" class="xowa-visited">Category</a>
+              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_15" title="Options/Category" class="xowa-visited">Category</a>
             </td>
             <td>
               Category options
@@ -434,7 +442,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_15" title="Options/Import Dansguardian">Import Dansguardian</a>
+              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_16" title="Options/Import Dansguardian">Import Dansguardian</a>
             </td>
             <td>
               Import using Dansguardian filters
@@ -447,7 +455,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_16" title="Options/HTML">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -455,7 +463,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_17" title="Options/Wiki HTML">Wiki</a>
+              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML">Wiki</a>
             </td>
             <td>
               Miscellaneous wiki HTML options
@@ -463,7 +471,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_18" title="Options/HTML Tidy">Tidy</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_19" title="Options/HTML Tidy">Tidy</a>
             </td>
             <td>
               HTML Tidy options
@@ -476,7 +484,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_19" title="Options/Content apps">Content Apps</a>
+              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_20" title="Options/Content apps">Content Apps</a>
             </td>
             <td>
               Content applications (web browser, image viewer, media player)
@@ -484,7 +492,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Firefox_addon.html" id="xolnki_20" title="Options/Firefox addon">Firefox Add-on</a>
+              <a href="http://xowa.org/home/wiki/Options/Firefox_addon.html" id="xolnki_21" title="Options/Firefox addon">Firefox Add-on</a>
             </td>
             <td>
               Firefox Add-on: Run XOWA inside Firefox
@@ -492,7 +500,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_21" title="Options/HTTP server">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_22" title="Options/HTTP server">HTTP Server</a>
             </td>
             <td>
               HTTP Server: Run XOWA as an HTTP Server
@@ -505,7 +513,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_22" title="Options/Search suggest">Search suggest</a>
+              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest">Search suggest</a>
             </td>
             <td>
               Search suggest options (controls behavior in the search box)
@@ -513,7 +521,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_23" title="Options/Search">Search</a>
+              <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_24" title="Options/Search">Search</a>
             </td>
             <td>
               Search options (controls behavior for Special:Search)
@@ -521,7 +529,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_24" title="Options/Popups">Popups</a>
+              <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_25" title="Options/Popups">Popups</a>
             </td>
             <td>
               Popups that appear when hovering over a link
@@ -534,7 +542,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_25" title="Options/Math">Math</a>
+              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_26" title="Options/Math">Math</a>
             </td>
             <td>
               Math options (text called in an {{#math}} statement)
@@ -542,7 +550,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_26" title="Options/Scribunto">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_27" title="Options/Scribunto">Scribunto</a>
             </td>
             <td>
               Scribunto/Lua options (text called in an {{#invoke}} statement)
@@ -550,7 +558,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_27" title="Options/Score">Score</a>
+              <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_28" title="Options/Score">Score</a>
             </td>
             <td>
               Score options (text called in a &lt;score&gt; statement; used to render musical scores)
@@ -558,7 +566,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wikibase.html" id="xolnki_28" title="Options/Wikibase">Wikibase</a>
+              <a href="http://xowa.org/home/wiki/Options/Wikibase.html" id="xolnki_29" title="Options/Wikibase">Wikibase</a>
             </td>
             <td>
               Wikidata options
@@ -571,7 +579,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_29" title="Options/Dev">Dev</a>
+              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_30" title="Options/Dev">Dev</a>
             </td>
             <td>
               Developer options
