--- a/home/wiki/Options/Shortcuts.html
+++ b/home/wiki/Options/Shortcuts.html
@@ -259,6 +259,9 @@ li.active a, li.active a:hover
           <li class=''>
             <a href='/wiki/Options/Security'>Security</a>
           </li>
+          <li class=''>
+            <a href='/wiki/Options/Scripting'>Scripting</a>
+          </li>
           <li class='active'>
             <a href='/wiki/Options/Shortcuts'>Shortcuts</a>
           </li>
