--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -51,23 +51,29 @@
           <a href="#New_users"><span class="tocnumber">3</span> <span class="toctext">New users</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Online_setup"><span class="tocnumber">3.1</span> <span class="toctext">Online setup</span></a>
+              <a href="#Build_a_wiki_while_online"><span class="tocnumber">3.1</span> <span class="toctext">Build a wiki while online</span></a>
             </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Offline_setup"><span class="tocnumber">3.2</span> <span class="toctext">Offline setup</span></a>
+              <a href="#Build_a_wiki_while_offline"><span class="tocnumber">3.2</span> <span class="toctext">Build a wiki while offline</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-6">
+              <a href="#Download_pre-built_wikis_within_XOWA"><span class="tocnumber">3.3</span> <span class="toctext">Download pre-built wikis within XOWA</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-7">
+              <a href="#Download_pre-built_wikis_within_a_browser"><span class="tocnumber">3.4</span> <span class="toctext">Download pre-built wikis within a browser</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-6">
+        <li class="toclevel-1 tocsection-8">
           <a href="#Upgrade_users"><span class="tocnumber">4</span> <span class="toctext">Upgrade users</span></a>
         </li>
-        <li class="toclevel-1 tocsection-7">
+        <li class="toclevel-1 tocsection-9">
           <a href="#Tips"><span class="tocnumber">5</span> <span class="toctext">Tips</span></a>
         </li>
-        <li class="toclevel-1 tocsection-8">
+        <li class="toclevel-1 tocsection-10">
           <a href="#Notes"><span class="tocnumber">6</span> <span class="toctext">Notes</span></a>
         </li>
-        <li class="toclevel-1 tocsection-9">
+        <li class="toclevel-1 tocsection-11">
           <a href="#Links"><span class="tocnumber">7</span> <span class="toctext">Links</span></a>
         </li>
       </ul>
@@ -116,7 +122,7 @@
       </li>
     </ul>
     <p>
-      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log">change log</a>.
+      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log" class="xowa-visited">change log</a>.
     </p>
     <p>
       For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule">the release schedule</a>.
@@ -125,10 +131,24 @@
       <span class="mw-headline" id="New_users">New users</span>
     </h2>
     <p>
-      If this is the first time you've run XOWA, then please choose either the <b>online</b> or <b>offline</b> setup:
+      If this is the first time you've run XOWA, then please choose from the following:
     </p>
+    <ul>
+      <li>
+        Build a wiki while online
+      </li>
+      <li>
+        Build a wiki while offline
+      </li>
+      <li>
+        Download pre-built wikis within XOWA
+      </li>
+      <li>
+        Download pre-built wikis within a browser
+      </li>
+    </ul>
     <h5>
-      <span class="mw-headline" id="Online_setup">Online setup</span>
+      <span class="mw-headline" id="Build_a_wiki_while_online">Build a wiki while online</span>
     </h5>
     <hr>
     <ul>
@@ -183,16 +203,46 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
       </dd>
     </dl>
     <h5>
-      <span class="mw-headline" id="Offline_setup">Offline setup</span>
+      <span class="mw-headline" id="Build_a_wiki_while_offline">Build a wiki while offline</span>
     </h5>
-    <hr>
     <ul>
       <li>
         <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline">import offline</a>.
+      </li>
+    </ul>
+    <h5>
+      <span class="mw-headline" id="Download_pre-built_wikis_within_XOWA">Download pre-built wikis within XOWA</span>
+    </h5>
+    <ul>
+      <li>
+        Go to <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_13" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
+      </li>
+      <li>
+        Add your wikis to the Queue
+      </li>
+      <li>
+        Press Run
+      </li>
+      <li>
+        For more instructions, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_14" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
+      </li>
+    </ul>
+    <h5>
+      <span class="mw-headline" id="Download_pre-built_wikis_within_a_browser">Download pre-built wikis within a browser</span>
+    </h5>
+    <ul>
+      <li>
+        Go to <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_15" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
+      </li>
+      <li>
+        Navigate to your wiki page from the list
+      </li>
+      <li>
+        Download the listed urls
       </li>
     </ul>
     <h2>
@@ -203,13 +253,13 @@
     </p>
     <ul>
       <li>
-        v3.9.2 features a new Category system. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_13" title="App/Category">Category Overview</a>
+        v3.9.2 features a new Category system. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_16" title="App/Category">Category Overview</a>
       </li>
       <li>
-        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_14" title="Special:XowaDownloadCentral">Download Central</a>
+        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_17" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
       </li>
       <li>
-        v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_15" title="App/Search">App/Search</a>
+        v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_18" title="App/Search">App/Search</a>
       </li>
     </ul>
     <dl>
@@ -225,13 +275,13 @@
         v2.8.1 has a language converter dropdown for the Chinese wikis.
       </li>
       <li>
-        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_16" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
+        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_19" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_17" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_18" title="App/UI/HTML Browser">HTML Browser</a>
+        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_20" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_21" title="App/UI/HTML Browser">HTML Browser</a>
       </li>
       <li>
-        v2.6.3 uses WebKit for MacOSX. For more info, see <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_19" title="Blog">Blog</a><br>
+        v2.6.3 uses WebKit for MacOSX. For more info, see <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_22" title="Blog">Blog</a><br>
       </li>
     </ul>
     <dl>
@@ -241,13 +291,13 @@
     </dl>
     <ul>
       <li>
-        v2.5.4 has changed online file downloads. Among other things, ImageMagick and Inkscape are no longer required. For more info, see <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_20" title="App/Basics/Files">Files</a>
+        v2.5.4 has changed online file downloads. Among other things, ImageMagick and Inkscape are no longer required. For more info, see <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_23" title="App/Basics/Files">Files</a>
       </li>
       <li>
-        v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_21" title="App/Search">App/Search</a>
+        v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_24" title="App/Search">App/Search</a>
       </li>
       <li>
-        v2.4.1 has introduced major database layout changes. For more info, see <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_22" title="Dev/Design/Database">Database</a>
+        v2.4.1 has introduced major database layout changes. For more info, see <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_25" title="Dev/Design/Database">Database</a>
       </li>
     </ul>
     <h2>
@@ -267,15 +317,15 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_23" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_24" title="Options/HTML">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML">Options/HTML</a>
           </li>
         </ul>
       </li>
       <li>
-        <b>Find box</b>: Press Ctrl+F on your keyboard. This will show the Find box (in the lower left-hand corner). Type "tips". Notice that the word "Tips" is highlighted above. Note that Alt+P (Previous) and Alt+N (Next) will change search direction. See <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_25" title="App/UI/Find box">Find Box</a> for more info.
+        <b>Find box</b>: Press Ctrl+F on your keyboard. This will show the Find box (in the lower left-hand corner). Type "tips". Notice that the word "Tips" is highlighted above. Note that Alt+P (Previous) and Alt+N (Next) will change search direction. See <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_28" title="App/UI/Find box">Find Box</a> for more info.
       </li>
       <li>
-        <b>Address bar</b>: Press Alt+D or Ctrl+L on your keyboard. This will take you to the Address bar at the top of the screen. Type "s.w:Earth" (no quotes) and press Enter. This will open the Simple Wikipedia page for Earth. See <a href="http://xowa.org/home/wiki/App/UI/Address_bar/Shortcuts.html#Default_shortcuts" id="xolnki_26" title="App/UI/Address bar/Shortcuts">Address bar/Shortcuts</a> for more shortcuts.
+        <b>Address bar</b>: Press Alt+D or Ctrl+L on your keyboard. This will take you to the Address bar at the top of the screen. Type "s.w:Earth" (no quotes) and press Enter. This will open the Simple Wikipedia page for Earth. See <a href="http://xowa.org/home/wiki/App/UI/Address_bar/Shortcuts.html#Default_shortcuts" id="xolnki_29" title="App/UI/Address bar/Shortcuts">Address bar/Shortcuts</a> for more shortcuts.
       </li>
       <li>
         <b>Middle-click in address bar</b>: Copy and paste urls directly into the address bar with the middle mouse button to open the page. For example: 
@@ -296,14 +346,14 @@
       <dd>
         <dl>
           <dd>
-            Now you can copy and paste any Wikipedia url directly into XOWA and its page will open (and all its images will download.) See <a href="http://xowa.org/home/wiki/App/UI/Address_bar/URLs.html" id="xolnki_27" title="App/UI/Address bar/URLs">Address_bar/URLs</a> for more info
+            Now you can copy and paste any Wikipedia url directly into XOWA and its page will open (and all its images will download.) See <a href="http://xowa.org/home/wiki/App/UI/Address_bar/URLs.html" id="xolnki_30" title="App/UI/Address bar/URLs">Address_bar/URLs</a> for more info
           </dd>
         </dl>
       </dd>
     </dl>
     <ul>
       <li>
-        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_28" title="Options" class="xowa-visited">Options</a>
+        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_31" title="Options" class="xowa-visited">Options</a>
       </li>
       <li>
         <b>Right-click</b>: Right click on an image and click save as file
@@ -314,7 +364,7 @@
     </h2>
     <ul>
       <li>
-        <b>Wikidata</b>: If you're seeing {{#property}} in your wikis you should also set up Wikidata. See <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_29" title="App/Wiki types/Wikidata">App/Wiki_types/Wikidata</a>
+        <b>Wikidata</b>: If you're seeing {{#property}} in your wikis you should also set up Wikidata. See <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_32" title="App/Wiki types/Wikidata">App/Wiki_types/Wikidata</a>
       </li>
     </ul>
     <h2>
@@ -323,7 +373,7 @@
     <table class="wikitable">
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_30" title="Special:XowaDownloadCentral">Download Central</a>
+          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_33" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
         </td>
         <td>
           Download an Android-ready wiki with images from archive.org
@@ -331,15 +381,15 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_31" title="Dashboard/Import/Online">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_34" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
         </td>
         <td>
-          Import a wiki from a list of 826 known Wikimedia Foundation wikis
+          Import a wiki from a list of 828 known Wikimedia Foundation wikis
         </td>
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_32" title="Dashboard/Import/Offline">Import Offline</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_35" title="Dashboard/Import/Offline">Import Offline</a>
         </td>
         <td>
           Import a wiki through a dump; import also through script; also upgrade category to version 2
@@ -347,7 +397,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_33" title="Dashboard/Image databases">Image databases</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_36" title="Dashboard/Image databases">Image databases</a>
         </td>
         <td>
           Download image databases for your wiki
@@ -355,7 +405,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_34" title="Dashboard/Wiki maintenance">Wiki Maintenance</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_37" title="Dashboard/Wiki maintenance" class="xowa-visited">Wiki Maintenance</a>
         </td>
         <td>
           Update your wikis if they are outdated
@@ -363,7 +413,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_35" title="Help/FAQs">FAQs</a>
+          <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_38" title="Help/FAQs">FAQs</a>
         </td>
         <td>
           View questions asked by other users
@@ -371,7 +421,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_36" title="Help/Contents" class="xowa-visited">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_39" title="Help/Contents" class="xowa-visited">Contents</a>
         </td>
         <td>
           View all help topics
@@ -379,7 +429,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_37" title="Options" class="xowa-visited">Options</a>
+          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_40" title="Options" class="xowa-visited">Options</a>
         </td>
         <td>
           Configure XOWA options
@@ -387,7 +437,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_38" title="Change log">Change log</a>
+          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_41" title="Change log" class="xowa-visited">Change log</a>
         </td>
         <td>
           View changes for each XOWA release
@@ -395,7 +445,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_39" title="Diagnostics">Diagnostics</a>
+          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_42" title="Diagnostics" class="xowa-visited">Diagnostics</a>
         </td>
         <td>
           Run test pages to make sure that XOWA works on your system.
