--- a/home/wiki/Options/Menus.html
+++ b/home/wiki/Options/Menus.html
@@ -260,6 +260,9 @@ li.active a, li.active a:hover
             <a href='/wiki/Options/Security'>Security</a>
           </li>
           <li class=''>
+            <a href='/wiki/Options/Scripting'>Scripting</a>
+          </li>
+          <li class=''>
             <a href='/wiki/Options/Shortcuts'>Shortcuts</a>
           </li>
           <li class='active'>
