--- a/home/wiki/Options/Scripting.html
+++ b/home/wiki/Options/Scripting.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Options/Config script - XOWA</title>
+  <title>Options/Scripting - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   <style data-source="xowa" type="text/css">
@@ -217,7 +217,7 @@ li.active a, li.active a:hover
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Options/Config script</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Options/Scripting</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
@@ -259,7 +259,7 @@ li.active a, li.active a:hover
           <li class=''>
             <a href='/wiki/Options/Security'>Security</a>
           </li>
-          <li class=''>
+          <li class='active'>
             <a href='/wiki/Options/Scripting'>Scripting</a>
           </li>
           <li class=''>
@@ -268,7 +268,7 @@ li.active a, li.active a:hover
           <li class=''>
             <a href='/wiki/Options/Menus'>Menus</a>
           </li>
-          <li class='active'>
+          <li class=''>
             <a href='/wiki/Options/Config_script'>Config script</a>
           </li>
         </ul>
@@ -282,7 +282,7 @@ li.active a, li.active a:hover
           </div>
           <ul>
             <li class="toclevel-1 tocsection-1">
-              <a href="#Script"><span class="tocnumber">1</span> <span class="toctext">Script</span></a>
+              <a href="#Basic"><span class="tocnumber">1</span> <span class="toctext">Basic</span></a>
             </li>
             <li class="toclevel-1 tocsection-2">
               <a href="#Notes"><span class="tocnumber">2</span> <span class="toctext">Notes</span></a>
@@ -295,41 +295,37 @@ li.active a, li.active a:hover
           </p>
         </div><br>
          
+        <p>
+          For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Scripting.html" id="xolnki_2" title="App/Xtn/Scripting">the scripting help page</a>
+        </p>
         <h2>
-          <span class="mw-headline" id="Script">Script</span>
+          <span class="mw-headline" id="Basic">Basic</span>
         </h2>
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              Config script: <sup id="cite_ref-config_script_0-0" class="reference"><a href="#cite_note-config_script-0">[1]</a></sup>
+              Enabled: <sup id="cite_ref-enabled_0-0" class="reference"><a href="#cite_note-enabled-0">[1]</a></sup>
             </td>
             <td>
-<textarea xowa_prop="app.user.cfg.startup.custom_config" class="options_textarea" style="width: 600px; height: 500px;" accesskey=',' id='xowa_prop_0'>
-// xowa.api.addon.bldr.central.log_verbose = 'y';
-/*
-xowa.api.addon.bldr.sync.manual_enabled = 'y';
-xowa.api.addon.bldr.sync.auto_enabled = 'y';
-*/
-</textarea>
+              <input xowa_prop="xowa.api.addon.app__scripting__enabled" type="checkbox" class="options_checkbox" accesskey='d' id='xowa_prop_0' checked='checked'>
             </td>
           </tr>
         </table>
+        <p>
+          <br>
+        </p>
         <h2>
           <span class="mw-headline" id="Notes">Notes</span>
         </h2>
         <ol class="references">
-          <li id="cite_note-config_script-0">
-            <span class="mw-cite-backlink"><a href="#cite_ref-config_script_0-0">^</a></span> <span class="reference-text">Enter custom configuration. (default is <code>&nbsp;</code>)<br>
-             Note the following:</span>
+          <li id="cite_note-enabled-0">
+            <span class="mw-cite-backlink"><a href="#cite_ref-enabled_0-0">^</a></span> <span class="reference-text">Choose one of the following: (default is <code>checked</code>)</span>
             <ul>
               <li>
-                <span class="reference-text">These scripts will run after the application starts up. They will also run whenever you click Save on this page.</span>
+                <span class="reference-text"><b>checked</b>: Enable scripting for a wiki. Script files are placed in <code>/wiki/wiki_name/bin/any/script/</code></span>
               </li>
               <li>
-                <span class="reference-text">These scripts are intended for advanced users. They are in the format of .gfs statements (for examples, see /xowa/xowa.gfs). Please do not enter scripts unless instructed, or else XOWA may fail to start up.</span>
-              </li>
-              <li>
-                <span class="reference-text">These scripts are saved to /xowa/user/anonymous/data/cfg/user_custom_cfg.gfs. If XOWA fails to start up, simply delete the file.</span>
+                <span class="reference-text"><b>unchecked</b>: (default) Disable scripting for a wiki</span>
               </li>
             </ul>
           </li>
