--- a/home/wiki/Options/Security.html
+++ b/home/wiki/Options/Security.html
@@ -260,6 +260,9 @@ li.active a, li.active a:hover
             <a href='/wiki/Options/Security'>Security</a>
           </li>
           <li class=''>
+            <a href='/wiki/Options/Scripting'>Scripting</a>
+          </li>
+          <li class=''>
             <a href='/wiki/Options/Shortcuts'>Shortcuts</a>
           </li>
           <li class=''>
@@ -376,7 +379,7 @@ li.active a, li.active a:hover
             <span class="mw-cite-backlink"><a href="#cite_ref-javascript_enabled_0-0">^</a></span> <span class="reference-text">Choose if Javascript enabled: (default is <code>checked</code>)</span>
             <ul>
               <li>
-                <span class="reference-text"><b>checked</b> to enable JavaScript. Note that this will allow you to use the functions listed at <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/All.html" id="xolnki_2" title="Diagnostics/Javascript/All">Diagnostics/Javascript/All</a></span>
+                <span class="reference-text"><b>checked</b> to enable JavaScript. Note that this will allow you to use the functions listed at <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/All.html" id="xolnki_2" title="Diagnostics/Javascript/All" class="xowa-visited">Diagnostics/Javascript/All</a></span>
               </li>
               <li>
                 <span class="reference-text"><b>unchecked</b> to disable JavaScript. Only JavaScript specified by XOWA will run</span>
