--- a/home/wiki/Wiki_setup/Simple_wikis.html
+++ b/home/wiki/Wiki_setup/Simple_wikis.html
@@ -123,7 +123,7 @@
     </h3>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_3" title="Special:XowaDownloadCentral">Special:XowaDownloadCentral</a>
+        Go to <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_3" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
       </li>
       <li>
         In the <b>Available</b> table, add any of the following task names
@@ -185,7 +185,7 @@
     </h3>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_4" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_4" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         Find your wiki in the list
